--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,6 @@
   margin: 0 auto;
   font-family: Inter, Arial, sans-serif;
   font-family: "Noto serif", "Times New Roman", serif;
+  line-height: 20px;
+  font-size: 16px;
 }
