--- a/pages/index.css
+++ b/pages/index.css
@@ -137,3 +137,10 @@
   font-size: 20px;
   line-height: 30px;
 }
+
+.reservation {
+  background-color: #D9E7FF;
+  background-image: url(../images/background_reservation.svg);
+  background-size: cover;
+
+}
