--- a/pages/index.css
+++ b/pages/index.css
@@ -1,213 +1,7 @@
-.page{
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", "Arial", sans-serif;
-  line-height: 20px;
-  font-size: 16px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
 
-.header {
-  padding: 30px 80px 40px;
-  background-color: #fff;
-  background-image: url(../images/background_header.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__logo {
-  position: relative;
-  width: 105px;
-  height: 39px;
-  margin-bottom: 183px;
-  margin-left: -50px;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
-  color: #000;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000;
-}
-
-.header__title {
-  max-width: 729px;
-  margin: 0 0 28px 0;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Time New Roman", serif;
-  font-style: italic;
-  color: #3F96F3;
-}
-
-.header__paragraph {
-  margin-left: 80px;
-  max-width: 683px;
-  font-family: "Noto Serif", "Time New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  width: 648px;
-  height: 568px;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  align-items: end;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.recipes{
-  color: #fff;
-  background-color: #0A2750;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  padding: 100px 80px 215px;
-}
-
-.recipes__title {
-  color: #ffffff;
-  max-width: 580px;
-  margin: 0 0 24px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  color: #ffffff;
-  max-width: 438px;
-  margin: 0 0 80px;
-  font-family: "Noto Serif", "Time New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  gap: 40px;
-}
-
-.recipes__video-caption {
-  padding: 24px 0 0;
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  background-color: #D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-size: cover;
-  padding: 100px 0 120px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__label {
-  padding-bottom: 8px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  font-size: 20px;
-  line-height: 30px;
-  border-radius: 4px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__button {
-  padding: 20px 0;
-  width: 100%;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #1878DC;
-  color: #ffffff;
-  border: none;
-  margin-bottom: 32px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-  padding: 0;
-}
