--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,4 @@
 @import url(../blocks/recipes.css);
 @import url(../blocks/reservation.css);
 @import url(../blocks/form.css);
-
+@import url(../blocks/nav.css);
