--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,4 @@
 @import url(../blocks/form.css);
 @import url(../blocks/nav.css);
 @import url(../blocks/menu.css);
-@import url(../blocks/cards.css);
+@import url(../blocks/card.css);
