--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/menu.css);
 @import url(../blocks/card.css);
+@import url(../blocks/about.css);
