--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -26,4 +26,11 @@
 .nav__link {
   text-decoration: none;
   color: #000;
+  transition: opacity 0.5s;
+  cursor: pointer;
+}
+
+.nav__link:hover {
+  opacity: 50%;
+  color: #2f80ED;
 }
