--- a/blocks/header.css
+++ b/blocks/header.css
@@ -26,7 +26,7 @@
   color: #3F96F3;
 }
 
-.header__paragraph {
+.header__description {
   margin-left: 80px;
   max-width: 683px;
   font-family: "Noto Serif", "Time New Roman", serif;
