--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -53,8 +53,9 @@
 }
 
 .footer__social-link:hover {
-  color: #c1c1c1;
+  opacity: 0.7;
   margin: 0;
+  color: #c1c1c1;
 }
 
 .footer__social-icon {
