--- a/blocks/form.css
+++ b/blocks/form.css
@@ -39,11 +39,11 @@
   margin-bottom: 32px;
   cursor: pointer;
   opacity: 1;
-  transition: opacity .5s ease;
+  transition: opacity 1s ease;
 }
 
 .form__button:hover {
-  opacity: .7;
+  transition: opacity .7s ease;
   background-color: #3f96f3;
 }
 
