--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-position: center;
 }
 
 .menu__title {
@@ -23,6 +24,7 @@
   font-size: 20px;
   line-height: 30px;
   font-family: "Noto Serif", "Time New Roman", serif;
+  text-align: center;
 }
 
 .menu__cards {
