--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -25,7 +25,7 @@
 
 .nav__link {
   text-decoration: none;
-  color: #2f80ED;
+  color: #000000;
   transition: opacity 0.5s;
   cursor: pointer;
 }
