--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -4,7 +4,8 @@
   background-image: url(../images/background_recipes.svg);
   background-size: cover;
   padding: 100px 80px 215px;
-  background-position: repeat;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .recipes__title {
@@ -47,4 +48,5 @@
 .recipes__iframe {
   width: 480px;
   height: 273px;
+  border: none;
 }
